feat: Implement journal create endpoint
